# hedge-fund-factor-risk-modeling

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  real_fama.yaml  real_fund.yaml
data/: README.md
data/sample/: sample_fama_factors.csv  sample_fund_returns.csv
notebooks/: 01_hedge_fund_factor_analysis.ipynb
results/: expanding_betas.csv  factor_exposures.csv  merged_data.csv  model_performance.csv  residual_diagnostics.csv  rolling_betas.csv  summary_statistics.csv
scripts/: download_fama_french.sh  setup_env.sh
src/hedge_fund_factor_modeling/: __init__.py  __main__.py  cli.py  data.py  evaluation.py  factors.py  plots.py  regression.py  risk_attribution.py  rolling_exposures.py
tests/: conftest.py  test_data_alignment.py  test_factor_merge.py  test_no_lookahead.py  test_regression_shapes.py
